methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:21: error: ':' expected but ')' found.
def Motif(c){
           ^FlowerPot:43: error: identifier expected but '}' found.
}
^